[gd_scene load_steps=6 format=2]

[ext_resource path="res://cooltext373010700067361.png" type="Texture" id=1]
[ext_resource path="res://fondoxd.jpg" type="Texture" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]
[ext_resource path="res://cooltext373011587490515.png" type="Texture" id=4]
[ext_resource path="res://cooltext373011447520975.png" type="Texture" id=5]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 59.0
rect_scale = Vector2( 0.961651, 1.7867 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1425.0
margin_bottom = 768.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 458.0
margin_right = 967.0
margin_bottom = 85.0
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 509.0
margin_bottom = 85.0
texture = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 1425.0
margin_bottom = 264.0
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 1425.0
margin_bottom = 175.0
texture = ExtResource( 5 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 712.0
margin_top = 268.0
margin_right = 712.0
margin_bottom = 268.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 681.415, 382.359 )
scale = Vector2( 0.856257, 0.647455 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1425.0
margin_bottom = 768.0
script = ExtResource( 3 )

[node name="JUGAR" type="Button" parent="Control"]
margin_left = 506.0
margin_top = 268.0
margin_right = 918.0
margin_bottom = 361.0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/JUGAR" to="Control" method="_on_JUGAR_pressed"]
