[gd_scene load_steps=6 format=2]

[ext_resource path="res://fondoxd.jpg" type="Texture" id=1]
[ext_resource path="res://cooltext373009042904383.png" type="Texture" id=2]
[ext_resource path="res://cooltext373009912020161.png" type="Texture" id=3]
[ext_resource path="res://cooltext373010513702442.png" type="Texture" id=4]
[ext_resource path="res://Control.gd" type="Script" id=5]

[node name="MarginContainer" type="MarginContainer"]
anchor_left = 0.164
anchor_top = 0.054
anchor_right = 0.164
anchor_bottom = 0.054
margin_left = -227.867
margin_top = -41.472
margin_right = 1138.13
margin_bottom = 726.528
rect_scale = Vector2( 1.0381, 1.43966 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
size_flags_vertical = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 509.0
margin_right = 857.0
margin_bottom = 71.0
size_flags_horizontal = 6

[node name="Historia" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 348.0
margin_bottom = 71.0
size_flags_horizontal = 0
texture = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 225.0
margin_top = 75.0
margin_right = 1141.0
margin_bottom = 300.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Historia2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 916.0
margin_bottom = 225.0
texture = ExtResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 683.0
margin_top = 304.0
margin_right = 683.0
margin_bottom = 304.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Historia2" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 683.0
margin_top = 308.0
margin_right = 683.0
margin_bottom = 308.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 681.079, 386.485 )
scale = Vector2( 0.856152, 0.635858 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
script = ExtResource( 5 )

[node name="Siguiente" type="Button" parent="Control"]
margin_left = 372.0
margin_top = 308.0
margin_right = 994.0
margin_bottom = 400.0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Siguiente" to="Control" method="_on_Siguiente_pressed"]
