[gd_scene load_steps=9 format=2]

[ext_resource path="res://cooltext372993805305406.png" type="Texture" id=1]
[ext_resource path="res://cooltext372994263544965.png" type="Texture" id=2]
[ext_resource path="res://cooltext372995530052995.png" type="Texture" id=3]
[ext_resource path="res://Jump (12).png" type="Texture" id=4]
[ext_resource path="res://136163017_409414600267514_1330046421784135925_n.png" type="Texture" id=5]
[ext_resource path="res://fondoxd.jpg" type="Texture" id=6]
[ext_resource path="res://Control.gd" type="Script" id=7]
[ext_resource path="res://cooltext373000409577682.png" type="Texture" id=9]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 458.0
margin_bottom = 33.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1704.0
margin_bottom = 721.0
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_right = 1584.0
margin_bottom = 641.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_right = 646.0
margin_bottom = 641.0
size_flags_stretch_ratio = 0.0

[node name="Titulo" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer"]
margin_right = 646.0
margin_bottom = 176.0
size_flags_vertical = 2
texture = ExtResource( 1 )

[node name="Botón Salir" type="Button" parent="Control/HBoxContainer/VBoxContainer/Titulo"]
margin_left = 1121.68
margin_top = -74.343
margin_right = 1241.68
margin_bottom = 53.657
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botón Jugar" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 179.0
margin_bottom = 245.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color_disabled = Color( 1, 0.305882, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 2 )
flat = true

[node name="Botón Créditos" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 246.0
margin_bottom = 412.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 3 )
flat = true
clip_text = true
align = 0

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 646.0
margin_bottom = 641.0
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="Control/HBoxContainer"]
margin_left = 650.0
margin_right = 1584.0
margin_bottom = 641.0
size_flags_vertical = 3

[node name="Dibujo Menú" type="TextureRect" parent="Control/HBoxContainer/CenterContainer"]
margin_right = 934.0
margin_bottom = 641.0
texture = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 685.343, 392.393 )
scale = Vector2( 0.856679, 0.639847 )
texture = ExtResource( 6 )
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/Titulo/Botón Salir" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/Botón Jugar" to="Control" method="_on_Botn_Jugar_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/Botón Créditos" to="Control" method="_on_Botn_Crditos_pressed"]
